# django-kamal-healthcheck

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/kamal_healthcheck/: apps.py  checks.py  middleware.py
tests/: settings.py  test_middleware.py
