[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-kamal-healthcheck"
version = "0.1.0"
description = "Django middleware for Kamal healthcheck requests"
readme = "README.md"
license = "MIT"
authors = [{name = "Jacob Smullyan", email = "smulloni@smullyan.org"}]
requires-python = ">=3.10"
dependencies = ["django>=4.2"]
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Repository = "https://github.com/smulloni/django-kamal-healthcheck"

[dependency-groups]
dev = ["pytest", "pytest-django"]

[tool.hatch.build.targets.wheel]
packages = ["src/kamal_healthcheck"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["src", "."]
